css/structure.css
/* this is the structural css, for best results do not edit this file */

body {
  margin: 0;
  overflow-wrap: break-word;
  word-wrap: break-word;
  word-break: break-word;
  transition: all .5s ease-in-out;
}

#full {
  height: 100%;
  background-color: rgba(255,255,255,0.6);
}

.search input {
  width: 25px;
  transition: all .5s ease-in-out;
}

.search input:focus {
  transition: all .5s ease-in-out;
  width: 165px; 
}

pre, code {
  font-size: 1em;
  overflow: auto;
  word-break: break-all;
  word-wrap: break-word;
  white-space: pre;
  white-space: -moz-pre-wrap;
  white-space: pre-wrap;
  white-space: pre\9;
}

#screen {
  position: absolute;
  top: 40px;
  left: 0;
  right: 0;
  bottom: 0;
}

#scroller, #welcome {
  width: 680px;
  max-width: 94%; 
  margin-left: auto; 
  margin-right: auto;
}

#scroller:last-child {
  margin-bottom: 20em;
}

.navbar {
  width: 100%;
  height: 25px;
  position: fixed;
  padding-top: .4em;
  padding-bottom: .3em;
  top: 0;
  z-index: 1000;
  left: 0; right: 0; top: 0;
}


.navbar .internal {
  max-width: 97%;
  margin-left: auto;
  margin-right: auto;
}

.profileImage {
  width: 125px;
  height: 125px;
  margin-right: .5em;
  float: left;
  object-fit: cover; 
}

.inner-profile {
  padding: .5em;
  min-height: 135px;
}

.avatar {
  width: 24px;
  height: 24px;
  margin-top: 0;
  margin-right: .25em;
  margin-bottom: 0;
  vertical-align: top;
  object-fit: cover;
}

blockquote {
  padding-left: .5em;
}

h1, h2, h3, h4, h5, h6, p { margin-top: .35ex; margin-bottom: .35ex; line-height: 1.35em; }

h1 { font-size: 1.4em; }
h2 { font-size: 1.3em; }
h3 { font-size: 1.25em; }
h4 { font-size: 1.2em; }
h5 { font-size: 1.15em; }
h6 { font-size: 1.1em; }

hr {
  clear: both;
  border-width: 1px 0 0;
  height: 0;
  margin-bottom: .9em;
  border-color: #fff;
}

br {
  display: block;
  content: "";
  margin: .2em;
}

.profile {
  margin-top: .5em;
  border-radius: 5px;
}

.message {
  margin-top: .5em;
  padding: .5em;
  border-radius: 5px;
}

.message, .message > * {
  animation: fadein .5s;
}

@keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}

.reply {
  margin-left: 1em;
}

.content {
  margin-top: .5em;
}

img, canvas {
  margin-top: .5em;
  margin-bottom: .5em;
  max-width: 100%;
  border-radius: 5px; 
  transition: all .1s ease-in-out;
}

.right {float: right; margin-left: .5em;}

a {text-decoration: none;}

a:hover {text-decoration: underline; }

textarea {
  width: 100%;
  max-width: 100%;
  margin-top: .5em;
  margin-bottom: .5em;
  font-size: 1em;
  border: 1px solid #ccc;
  border-radius: 5px;
  height: 100px;
}

iframe {
  width: 100%; 
  max-width: 100%; 
  height: 400px; 
  max-height: 680px;
  border: 1px solid #ccc;
}

@media only screen and (max-width: 680px) {
  #screen { top: 4em; }
  #scroller {max-width: 100%;}
  textarea { height: 200px;}
  .navbar .message { margin-top: 2em; }
}

input {
  font-size: 1em;
  border: 1px solid #ccc;
  border-radius: 5px;
  margin-right: 1px;
}

textarea:focus {
  outline: none;
}

button {
  font-size: 1em;
  margin: 0;
  margin-right: 1px;
  padding-top: 0;
  padding-bottom: 0;
  border: 1px solid #ccc;
  border-radius: 5px;
}

button:hover {
  background: #fff;
}

ul {
  list-style: square;
}

.thoreau {
  filter: brightness(1.1) hue-rotate(-10deg) sepia(0.3) saturate(1.6);
}

.thoreau::after {
    background: #0044cc;
    mix-blend-mode: screen;
    opacity: .3;
}

.melville {
  filter: brightness(1.2) hue-rotate(-10deg) sepia(0.3) saturate(2);
}

.melville::after {
  background: #0044cc;
  mix-blend-mode: screen;
  opacity: .3;
}

.pkdick {
  filter: sepia(0.3) brightness(1.2);
  background: radial-gradient(circle, #e6e7e0 40%, rgba(43, 42, 161, 0.6) 110%);
}

.hoover {
  filter: sepia(0.3) contrast(1.1) brightness(1.1) grayscale(0.8);
}

.yeats {
    filter: brightness(1.1) sepia(0.1) contrast(1.1) brightness(1.3) saturate(1.9)
}
.yeats::after {
  background: #b9bdbb;
  mix-blend-mode: screen;
  opacity: .2;
}

